# spotty

./: Dockerfile  README.md  config.json  config.yaml  docker-compose.yml  pyproject.toml  repository.json  run.sh
examples/: tag_to_spotify_automation.yaml
pn532/: i2c.py  pn532.py  spi.py  uart.py
spotty/: __init__.py  ha_client.py  main.py  nfc_reader.py
